# pedalboard-audio-studio

./: .gitignore  DEPLOYMENT.md  INSTALL_SECURITY.md  README.md  SECURITY.md
backend/: .env.example  .gitignore  effects.py  main.py  nixpacks.toml  presets.py  pyproject.toml  railway.json  requirements.txt  security.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  constants.ts  index.css  theme-presets.ts  theme.ts  types.ts
frontend/src/components/: AudioPlayer.tsx  EffectChain.tsx  EffectControl.tsx  ErrorBoundary.tsx  FileUpload.tsx
frontend/src/utils/: classnames.ts  colors.ts  effects.ts  errorHandler.ts
scripts/: generate_favicons.py
