[project]
name = "pedalboard-backend"
version = "0.1.0"
description = "FastAPI backend for Pedalboard Audio Studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3,<0.130.0",
    "uvicorn[standard]>=0.34.0,<0.41.0",
    "python-multipart>=0.0.22",
    "pedalboard==0.9.8",
    "numpy==1.24.3",
    "aiofiles==23.2.1",
    "slowapi==0.1.9",
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "python-magic==0.4.27; sys_platform != 'win32'",
]

[tool.uv]
# Skip building a wheel; treat this as an application project.
package = false
